Convert template parameter data structures from lists to ordered dictionaries.

--- a/web/templates/header_template.html
+++ b/web/templates/header_template.html
@@ -13,19 +13,19 @@
             <nav id="navMain" class="navMain">
                 <ul>
                     <li class="ismega">
-                        <a {% if 'index' in nav %}class="selected"{% endif %} href="index.html">About</a>
+                        <a {% if 'index.html' == nav %}class="selected"{% endif %} href="index.html">About</a>
                     </li>
                     <li class="ismega">
-                        <a {% if 'schema' in nav %}class="selected"{% endif %} href="schema.html">JSON Schema (Normative)</a>
+                        <a {% if 'schema.html' == nav %}class="selected"{% endif %} href="schema.html">JSON Schema (Normative)</a>
                     </li>
                     <li class="ismega">
-                        <a {% if 'examples' in nav %}class="selected"{% endif %} href="examples.html">Example Files</a>
+                        <a {% if 'examples.html' == nav %}class="selected"{% endif %} href="examples.html">Example Files</a>
                     </li>
                     <li class="ismega">
-                        <a {% if 'templates' in nav %}class="selected"{% endif %} href="templates.html">XLSX Templates</a>
+                        <a {% if 'templates.html' == nav %}class="selected"{% endif %} href="templates.html">XLSX Templates</a>
                     </li>
                     <li class="ismega">
-                        <a {% if 'tk205' in nav %}class="selected"{% endif %} href="tk205.html">Toolkit 205</a>
+                        <a {% if 'tk205.html' == nav %}class="selected"{% endif %} href="tk205.html">Toolkit 205</a>
                     </li>
                 </ul>
             </nav>
