--- a/web/templates/examples_template.html
+++ b/web/templates/examples_template.html
@@ -8,13 +8,13 @@
 				<h2>{{headline}}</h2>
 				<hr>
 
-				{% for item in content %}
+				{% for key, item in content.items() %}
 				<div class="row">
 				<div class="column lg-12">
-					<h3 class="featureBlock-subHeading" style="margin-top: 6.5px;">{{item["title"]}}</h3>
-					<p>{{item["description"]}}</p>
+					<h3 class="featureBlock-subHeading" style="margin-top: 6.5px;">{{item['title']}}</h3>
+					<p>{{item['description']}}</p>
 				</div>
-				{% for file in item["file_list"] %}
+				{% for file in item['file_list'] %}
 					<div class="column lg-2" style="margin: auto;">
 						<a class="btn btn--hexagon-secondary" href="assets/examples/{{ file }}">
 							{% if 'cbor' in file %}
