--- a/web/templates/templates_template.html
+++ b/web/templates/templates_template.html
@@ -15,7 +15,7 @@
 						{% for item in rs_item %}
 						<div class="accordion-content">
 							<div style="display: flex; justify-content: space-around; align-items: center; padding-top: 20px">
-								<h3><a id="personal"></a>{{item['title']}} : {{item['description']}}</h3>
+								<h3><a id="personal"></a>{{item['description']}}</h3>
 								<a class="btn btn--hexagon-secondary" href="assets/templates/{{ item['template_file'] }}">Download</a>
 							</div>
 						</div>
