--- a/web/templates/templates_template.html
+++ b/web/templates/templates_template.html
@@ -8,23 +8,28 @@
 				<h2>{{headline}}</h2>
 				<hr>
 
-				{% for key, item in content.items() %}
-				<div class="row">
-				<div class="column lg-12">
-					<h3 class="featureBlock-subHeading" style="margin-top: 6.5px;">{{item['title']}}</h3>
-					<p>{{item['description']}}</p>
-				</div>
-					<div class="column lg-8" style="margin: auto;">
-						<a class="btn btn--hexagon-secondary" href="assets/templates/{{ item['template_file'] }}">Download</a>
-					</div>
-				</div>
-				{% endfor %}
-
-				<div class="row">
-					<!-- This must be here to even out the rows -->
-				</div>
+				<ul class="accordion">
+					{% for key, rs_item in content.items() %}
+					<li class="is-active">
+						<span id="RS" class="">{{ key }}</span>
+						{% for item in rs_item %}
+						<div class="accordion-content">
+							<div style="display: flex; justify-content: space-around; align-items: center; padding-top: 20px">
+								<h3><a id="personal"></a>{{item['description']}}</h3>
+								<a class="btn btn--hexagon-secondary" href="assets/templates/{{ item['template_file'] }}">Download</a>
+							</div>
+						</div>
+						{% endfor %}
+					</li>
+					{% endfor %}
+				</ul>
 
 			</div>
 		</div>
 	</div>
+	<script>
+		$('li').click(function(){
+			$(this).toggleClass("is-active");
+		});
+	</script>
 {% endblock %}
