--- a/web/templates/schema_template.html
+++ b/web/templates/schema_template.html
@@ -19,11 +19,11 @@
 					</div>
 				</div>
 				{% endfor %}
-
 				<div class="row">
 					<!-- This must be here to even out the rows -->
 				</div>
-
+				<hr>
+				<div class="footer"><p>Generated: {{timestamp}}</p></div>
 			</div>
 		</div>
 	</div>
