--- a/web/templates/about_template.html
+++ b/web/templates/about_template.html
@@ -11,6 +11,9 @@
             <p>To facilitate automated sharing of equipment performance characteristics by defining data models and data serialization formats.</p>
             <h3>Scope</h3>
             <p>This standard applies to performance data for any HVAC&R or other facility system, equipment, or component.</p>
+
+            <hr>
+            <div class="footer"><p>Generated: {{timestamp}}</p></div>
         </div>
     </div>
 </div>
