--- a/web/templates/tk205_template.html
+++ b/web/templates/tk205_template.html
@@ -8,6 +8,8 @@
             <hr>
             <h3>A toolkit to facilitate the adoption of the ASHRAE Standard 205P data exchange specification.</h3>
             <a class="btn btn--hexagon-secondary" href="https://github.com/open205/toolkit-205">Toolkit 205 Github Repository</a>
+            <hr>
+            <div class="footer"><p>Generated: {{timestamp}}</p></div>
         </div>
     </div>
 </div>
