Fix the linking issue with the templates files linking to appropriate buttons and fix the collapsing table issue where any download button clicked collapsed that part of the table.

--- a/web/templates/examples_template.html
+++ b/web/templates/examples_template.html
@@ -68,8 +68,8 @@
 	</div>
 </div>
 	<script>
-		$('li').click(function(){
-			$(this).toggleClass("is-active");
+		$('span').click(function(){
+			$(this).parent().toggleClass("is-active");
 		});
 	</script>
 {% endblock %}
