--- a/web/templates/templates_template.html
+++ b/web/templates/templates_template.html
@@ -32,8 +32,8 @@
 		
 	</div>
 	<script>
-		$('li').click(function(){
-			$(this).toggleClass("is-active");
+		$('span').click(function(){
+			$(this).parent().toggleClass("is-active");
 		});
 	</script>
 {% endblock %}
