Create markdown placeholders and add example markdown generation on the about page.

--- a/web/templates/examples_template.html
+++ b/web/templates/examples_template.html
@@ -64,6 +64,7 @@
 				{% endfor %}
 				<li></li>
 			</ul>
+			{{content.md}}
 			<hr>
             <div class="footer"><p>Generated: {{timestamp}}</p></div>
 		</div>
