--- a/web/templates/schema_template.html
+++ b/web/templates/schema_template.html
@@ -22,6 +22,7 @@
 				<div class="row">
 					<!-- This must be here to even out the rows -->
 				</div>
+				{{content.md}}
 				<hr>
 				<div class="footer"><p>Generated: {{timestamp}}</p></div>
 			</div>
