--- a/web/templates/about_template.html
+++ b/web/templates/about_template.html
@@ -11,7 +11,7 @@
             <p>To facilitate automated sharing of equipment performance characteristics by defining data models and data serialization formats.</p>
             <h3>Scope</h3>
             <p>This standard applies to performance data for any HVAC&R or other facility system, equipment, or component.</p>
-
+            {{content.md}}
             <hr>
             <div class="footer"><p>Generated: {{timestamp}}</p></div>
         </div>
