--- a/web/templates/templates_template.html
+++ b/web/templates/templates_template.html
@@ -25,6 +25,7 @@
 					</li>
 					{% endfor %}
 				</ul>
+				{{content.md}}
 				<hr>
 				<div class="footer"><p>Generated: {{timestamp}}</p></div>
 			</div>
