--- a/web/templates/templates_template.html
+++ b/web/templates/templates_template.html
@@ -6,6 +6,8 @@
 			<div class="contained">
 				<h2>{{headline}}</h2>
 				<hr>
+				{{markdown}}
+				<hr>
 				<ul class="accordion">
 					{% for key, rs_item in content.items() %}
 					<li class="is-active">
@@ -25,12 +27,11 @@
 					</li>
 					{% endfor %}
 				</ul>
-				{{content.md}}
 				<hr>
 				<div class="footer"><p>Generated: {{timestamp}}</p></div>
 			</div>
 		</div>
-		
+
 	</div>
 	<script>
 		$('span').click(function(){
