Update web content to reflect publication.

--- a/web/templates/header_template.html
+++ b/web/templates/header_template.html
@@ -4,7 +4,7 @@
             <a href="https://www.ashrae.org/">
                 <img src="assets/public/logo_ashrae.png">
             </a>
-            <h1>ASHRAE Standard 205P Resource Files</h1>
+            <h1>ASHRAE Standard 205 Resource Files</h1>
         </div>
     </div>
     <div class="headerMain-main">
